[gd_scene load_steps=2 format=3 uid="uid://dh8k2n7yaq3m5"]

[ext_resource type="Script" path="res://UI/SaveLoadUI.gd" id="1_saveload"]

[node name="SaveLoadUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_saveload")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save / Load Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SlotListContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="NewSlotContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NewSlotLabel" type="Label" parent="Panel/VBoxContainer/NewSlotContainer"]
layout_mode = 2
text = "New Save:"

[node name="NewSlotInput" type="LineEdit" parent="Panel/VBoxContainer/NewSlotContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter save name..."

[node name="CreateSlotButton" type="Button" parent="Panel/VBoxContainer/NewSlotContainer"]
layout_mode = 2
text = "Save"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Close"
